2008-10-13 [wwp]	0.3.6cvs1

	* po/fr.po
		Updated French translation.

2008-10-10 [paul]	0.3.6

	0.3.6 released

2008-10-04 [colin]	0.3.5cvs1

	* src/spam_report.c
		Win32: set translation dir

2008-10-03 [paul]	0.3.5

	0.3.5 released

2008-10-03 [paul]	0.3.4cvs4

	* configure.ac
	* po/ru.po
		added by Aleksei Miheev
	* po/ca.po
	* po/fi.po
	* po/hu.po
		updated by Miquel Oliete, Flammie Pirinen,
		Pader Rezo

2008-08-05 [colin]	0.3.4cvs3

	* src/spam_report.c
		Undeprecate GtkCTree

2008-07-29 [colin]	0.3.4cvs2

	* src/spam_report.c
		Switch the main menu to GtkUIManager

2008-07-25 [colin]	0.3.4cvs1

	* src/spam_report.c
		Switch to GtkUIManager for the summaryview
		menu item

2008-06-27 [paul]	0.3.4

	0.3.4 released

2008-06-27 [paul]	0.3.3cvs1

	* po/fi.po
		updated by Flammie Pirinen

2008-04-18 [paul]	0.3.3

	0.3.3 released

	* po/fi.po
	* po/it.po
		updated by Flammie Pirinen and Andrea Spadaccini

2008-04-18 [colin]	0.3.2cvs2

	* po/fr.po
		Update translation

2008-02-12 [wwp]	0.3.2cvs1

	* config.h.in
		Remove generated file from repository.

	* configure.ac
		Updated to match folder_sel API changes.


2008-02-08 [paul]	0.3.2

	0.3.2 released

2008-02-08 [paul]	0.3.1cvs1

	* po/fi.po
	* po/it.po
		updated by Flammie Pirinen and Andrea Spadaccini

2007-12-17 [paul]	0.3.1

	0.3.1 released

2007-12-17 [paul]	0.3.0cvs2

	* po/hu.po
	* po/it.po
		updated by Pader Rezso and Andrea Spadaccini

2007-11-26 [mones]	0.3.0cvs1

	* README
		State the fact that SpamCop is supported
		(already fixed at Debian package description)

2007-11-19 [paul]	0.3.0

	0.3.0 released

2007-11-19 [paul]	0.2.0cvs9

	* po/Makevars
	* po/es.po
	* po/fi.po
	* po/hu.po
	* po/it.po
	* po/pt_BR.po
	* po/sk.po
		updated by Ricardo Mones Lastra, Flammie Pirinen,
		Pader Reszo, Andrea Spadaccini, Frederico Goncalves
		Guimaraes, and Andrej Kacian
						

2007-11-12 [colin]	0.2.0cvs8

	* src/spam_report.c
		Set CURL timeout

2007-10-09 [wwp]	0.2.0cvs7

	* po/.cvsignore