@@ -31,3 +31,4 @@
 ( cvs diff -u -r 1.1.2.36 -r 1.1.2.37 configure.ac;  cvs diff -u -r 1.1.2.1 -r 1.1.2.2 po/ca.po;  cvs diff -u -r 1.1.2.5 -r 1.1.2.6 po/fi.po;  cvs diff -u -r 1.1.2.3 -r 1.1.2.4 po/hu.po;  diff -u /dev/null po/ru.po;  ) > 0.3.4cvs4.patchset
 ( cvs diff -u -r 1.1.2.13 -r 1.1.2.14 src/spam_report.c;  ) > 0.3.5cvs1.patchset
 ( cvs diff -u -r 1.1.2.3 -r 1.1.2.4 po/fr.po;  ) > 0.3.6cvs1.patchset
+( cvs diff -u -r 1.1.2.14 -r 1.1.2.15 src/spam_report.c;  ) > 0.3.6cvs2.patchset
