@@ -1,3 +1,8 @@
+2008-11-14 [colin]	0.3.6cvs2
+
+	* src/spam_report.c
+		Sync with core
+
 2008-10-13 [wwp]	0.3.6cvs1
 
 	* po/fr.po
